--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,10 +31,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/Practica1_201700988.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.itext5-itextpdf-5.5.12.jar=driver-PDF\\itext5-itextpdf-5.5.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.itext5-itextpdf-5.5.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
